Add FileFilter tests and simplify stream collection usage
Introduce new unit tests in `FileFilterTest.java` to demonstrate various file filtering and iteration approaches using lambdas and method references. Additionally, refactor `AntarcticaTimeZones.java` to use the simplified `toList()` method for stream collection, enhancing code readability.