@@ -18,7 +18,7 @@ public class AntarcticaTimeZones {
                         .map(now::atZone) // Stream<ZonedDateTime>
                         .sorted(comparingInt(
                                 zoneId -> zoneId.getOffset().getTotalSeconds()))
-                        .collect(Collectors.toList());
+                        .toList();
 
         antarcticZones.forEach(zdt ->
                 System.out.printf("UTC%6s: %25s %7s%n", zdt.getOffset(), zdt.getZone(),
